--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <a href="#" class="position-absolute end-0 p-2 text-danger ">
                             <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                         </a>
-                        <div class="card-background-image" style="background-image: url('/img/bolo.jpg');"></div>
+                        <div class="card-background-image" style="background-image: url('img/bolo.jpg');"></div>
                         <div class="card-body">
                           <h5 class="card-title">Bolo de Chocolate</h5>
                           <p class="card-text">20,90</p>
@@ -112,7 +112,7 @@
                         <a href="#" class="position-absolute end-0 p-2 text-danger ">
                             <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                         </a>
-                        <div class="card-background-image" style="background-image: url('/img/brownie.jpg');"></div>
+                        <div class="card-background-image" style="background-image: url('img/brownie.jpg');"></div>
                         <div class="card-body">
                           <h5 class="card-title">Brownie de Chocolate</h5>
                           <p class="card-text">20,90</p>
@@ -129,7 +129,7 @@
                         <a href="#" class="position-absolute end-0 p-2 text-danger ">
                             <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                         </a>
-                        <div class="card-background-image" style="background-image: url('/img/bolo.jpg');"></div>
+                        <div class="card-background-image" style="background-image: url('img/bolo.jpg');"></div>
                         <div class="card-body">
                           <h5 class="card-title">Bolo de Chocolate</h5>
                           <p class="card-text">20,90</p>
@@ -146,7 +146,7 @@
                         <a href="#" class="position-absolute end-0 p-2 text-danger ">
                             <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                         </a>
-                        <div class="card-background-image" style="background-image: url('/img/brownie.jpg');"></div>
+                        <div class="card-background-image" style="background-image: url('img/brownie.jpg');"></div>
                         <div class="card-body">
                           <h5 class="card-title">Brownie de Chocolate</h5>
                           <p class="card-text">20,90</p>
@@ -163,7 +163,7 @@
                         <a href="#" class="position-absolute end-0 p-2 text-danger ">
                             <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                         </a>
-                        <div class="card-background-image" style="background-image: url('/img/bolo.jpg');"></div>
+                        <div class="card-background-image" style="background-image: url('img/bolo.jpg');"></div>
                         <div class="card-body">
                           <h5 class="card-title">Bolo de Chocolate</h5>
                           <p class="card-text">20,90</p>
@@ -180,7 +180,7 @@
                         <a href="#" class="position-absolute end-0 p-2 text-danger ">
                             <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                         </a>
-                        <div class="card-background-image" style="background-image: url('/img/brownie.jpg');"></div>
+                        <div class="card-background-image" style="background-image: url('img/brownie.jpg');"></div>
                         <div class="card-body">
                           <h5 class="card-title">Brownie de Chocolate</h5>
                           <p class="card-text">20,90</p>
