--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container" id="divPaiNav">
                 <a href="#" 
                 class="logo navbar-brand d-flex">
-                    <img src="img/logo1_1.svg" alt="">
+                    <img src="img/campus-store-logo-preta.png" alt="">
                     OwlFlight
                 </a>
                 <button type="button" class="hamburger-menu navbar-toggler ms-auto" data-bs-toggle="collapse" data-bs-target="#menuNavbar">
