--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
     <header id="headerFather">
         <nav class="navbar navbar-expand-sm navbarBg">
             <div class="container" id="divPaiNav">
-                <a href="#" 
-                class="logo navbar-brand d-flex">
+                <a href="#" class="logo navbar-brand d-flex">
                     <img src="img/campus-store-logo-preta.png" alt="">
-                    OwlFlight
                 </a>
                 <button type="button" class="hamburger-menu navbar-toggler ms-auto" data-bs-toggle="collapse" data-bs-target="#menuNavbar">
                     <span class="navbar-toggler-icon"></span>
