--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <header id="headerFather">
         <nav class="navbar navbar-expand-sm navbarBg">
             <div class="container" id="divPaiNav">
-                <a href="#" class="logo navbar-brand d-flex">
-                    <img src="img/campus-store-logo-preta.png" alt="">
+                <a href="#" 
+                class="logo navbar-brand d-flex">
+                    <img src="img/campus-store-logo.png" alt="" class="logo-img">
+                    <img src="img/campus-store.png" alt="" class="logo-txt">
                 </a>
                 <button type="button" class="hamburger-menu navbar-toggler ms-auto" data-bs-toggle="collapse" data-bs-target="#menuNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -70,14 +72,7 @@
                 <img src="img/slide-3-mob.jpg" class="d-block d-md-none w-100 h-100" alt="">
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselMain" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Anterior</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselMain" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Próximo</span>
-            </button>
+            
           </div>
     </div>
 
