--- a/telas-de-cadastro/opc_cadastro.html
+++ b/telas-de-cadastro/opc_cadastro.html
@@ -18,10 +18,10 @@
                 </div>
                 <div class="input-group">
                     <div class="continue-btn opc-btn">
-                        <a href="/tela-de-cadastro/usuario_cadastrar.html"><button>Usuário</button></a>
+                        <a href="../tela-de-cadastro/usuario_cadastrar.html"><button>Usuário</button></a>
                     </div>
                     <div class="continue-btn opc-btn">
-                        <a href="/tela-de-cadastro/vendedor_cadastrar.html"><button>Vendedor</button></a>
+                        <a href="../tela-de-cadastro/vendedor_cadastrar.html"><button>Vendedor</button></a>
                     </div>
                 </div>
             </div>
