--- a/telas-de-cadastro/opc_cadastro.html
+++ b/telas-de-cadastro/opc_cadastro.html
@@ -21,7 +21,7 @@
                         <a href="/usuario_cadastrar.html"><button>Usuário</button></a>
                     </div>
                     <div class="continue-btn opc-btn">
-                        <a href="vendedor_cadastrar.html"><button>Vendedor</button></a>
+                        <a href="/vendedor_cadastrar.html"><button>Vendedor</button></a>
                     </div>
                 </div>
             </div>
